--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -26,14 +26,22 @@ jobs:
       - name: Build and test Vue.js
         run: npm run build --prefix test-vue-router
 
-      - name: Install Python and dependencies for Flask
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-          pip install -r Flask/requirements.txt
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.11.3'
+
+      - name: Set up Python environment
+        run: python -m venv Flask/venv
+                
+      - name: Activate Python environment
+        run: source Flask/venv/bin/activate
+
+      - name: Install Python dependencies for Flask
+        run: pip install -r Flask/requirements.txt
 
       - name: Test Flask application
         run: python Flask/app.py test
 
-      - name: Run end-to-end tests (if applicable)
-        run: # Add command to run end-to-end tests (e.g., Cypress, Selenium)
+      # - name: Run end-to-end tests (if applicable)
+      #   run: # Add command to run end-to-end tests (e.g., Cypress, Selenium)
