--- a/vue/package.json
+++ b/vue/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5"
