--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -21,10 +21,10 @@ jobs:
           node-version: '18.16.0'
 
       - name: Install dependencies for Vue.js
-        run: npm install --prefix test-vue-router
+        run: npm install --prefix vue
 
       - name: Build and test Vue.js
-        run: npm run build --prefix test-vue-router
+        run: npm run build --prefix vue
 
       - name: Set up Python
         uses: actions/setup-python@v2
