--- a/vue/package.json
+++ b/vue/package.json
@@ -17,7 +17,8 @@
     "datatables.net-select-dt": "^1.7.0",
     "jquery": "^3.7.1",
     "vue": "^2.6.14",
-    "vue-router": "^3.6.5"
+    "vue-router": "^3.6.5",
+    "vue-session": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
