--- a/vue/package.json
+++ b/vue/package.json
@@ -11,12 +11,14 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
     "core-js": "^3.8.3",
     "datatables.net-dt": "^1.13.6",
     "datatables.net-searchpanes-dt": "^2.2.0",
     "datatables.net-select-dt": "^1.7.0",
     "jquery": "^3.7.1",
     "vue": "^2.6.14",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^3.6.5",
     "vue-session": "^1.0.0"
   },
