--- a/vue/package.json
+++ b/vue/package.json
@@ -17,6 +17,7 @@
     "datatables.net-searchpanes-dt": "^2.2.0",
     "datatables.net-select-dt": "^1.7.0",
     "jquery": "^3.7.1",
+    "velocity-animate": "^1.5.2",
     "vue": "^2.6.14",
     "vue-chartjs": "^5.2.0",
     "vue-router": "^3.6.5",
