--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -40,8 +40,5 @@ jobs:
       - name: Install Python dependencies for Flask
         run: pip install -r Flask/requirements.txt
 
-      # - name: Test Flask application
-      #   run: python Flask/app.py test
-
-      # - name: Run end-to-end tests (if applicable)
-      #   run: # Add command to run end-to-end tests (e.g., Cypress, Selenium)
+      - name: Run Flask unit tests
+        run: python -m unittest test/unittest.py
