--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -31,14 +31,14 @@ jobs:
         with:
           python-version: '3.11.3'
 
-      - name: Set up Python environment
-        run: python -m venv Flask/venv
+      # - name: Set up Python environment
+      #   run: python -m venv Flask/venv
                 
-      - name: Activate Python environment
-        run: source Flask/venv/bin/activate
+      # - name: Activate Python environment
+      #   run: source Flask/venv/bin/activate
 
       - name: Install Python dependencies for Flask
         run: pip install -r Flask/requirements.txt
 
       - name: Run Flask unit tests
-        run: python -m unittest test/unittest.py
+        run: python -m unittest test/test1.py
