--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -41,4 +41,4 @@ jobs:
         run: pip install -r Flask/requirements.txt
 
       - name: Run Flask unit tests
-        run: python -m unittest test/test1.py
+        run: python -m unittest discover -s test
