--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -40,5 +40,5 @@ jobs:
       - name: Install Python dependencies for Flask
         run: pip install -r Flask/requirements.txt
 
-      - name: Run Flask unit tests
-        run: python -m unittest discover -s test -v
+      # - name: Run Flask unit tests
+      #   run: python -m unittest discover -s test -v
